- Novo comando `/top fazendeiros`. Veja os fazendeiros que mais colheram um tipo de planta.
- Criado um top de missões diárias no `/top diversos`. Apenas as dailies finalizadas após o lançamento desta versão contam.
- Novo tema de fundo de carta: Berserk. Criado por @dszalone.

### Changed

- A Menhera não busca mais pelo nome dos usuários das 3 primeiras páginas dos `/top`. 

## [5.18.0] - 2024-06-08

### Added

- Adicionado dois novos tipos de daily: **colher plantas** e **finalizar entregas**.
- Adicionado 41 novos gifs aos comandos de ação (Obg @mareys e @dszalone).

### Changed

- O limite máximo de peso para uma entrega do caminhão da fazendinha foi reduzido para `10 Kg`.
- O número de entregas por dia foi reduzido para `6`.
- O prêmio por finalizar todas entregas foi alterado para **30000** estrelinhas fixas.

### Fixed

- Corrigida a paginação infinita do comando `/fazendinha feira comprar`.

### Removed 

- O comando `/meme humor` foi deletado.

## [5.17.3] - 2024-06-06

### Changed

- Não é mais possível anunciar `Erva` na feirinha.
- Não é mais possível anunciar uma planta que você já tenha um anúncio na feirinha.

### Fixed

- Corrigido o problema do "maior lucro" das mensagens do Jogo do Bicho no servidor de suporte - Reportado por @maycon.orp.

## [5.17.2] - 2024-06-01

### Added

- **Bloquear mamadas**. Usuários podem escolher se querem ser mamadas ou não. 
- Adicionado comando `/personalizar mamadas` para escolher se você quer ou não ser mamado.

### Changed

- A descrição de aceitar uma sarrada foi alterada. 
- O comando `/casar` agora menciona usuários.

### Hotfix

- Os `/top`s vão até a página 100 agora.

## [5.17.1] - 2024-05-26

### Added

- Novos tipos de missões diárias adicionados!
- Adicionado botão para usar um roll ao tentar caçar cansado. 

### Changed

- Reduzido a chance de um bônus de daily ser uma semente.
- Adicionado emoji na mensagem de recusar Pix.
- O tempo para o sorteio do bicho foi reduzido para **5** horas.